--- a/public/css/site_style.css
+++ b/public/css/site_style.css
@@ -1,10 +1,13 @@
 a{
     text-decoration: none;
 }
+.carousel .image {
+    max-height: 90vh;
+}
 @media only screen and (min-width: 900px) {
-    .carousel .image {
-        max-height: 90vh;
-    }
+    /*.carousel .image {*/
+    /*    max-height: 90vh;*/
+    /*}*/
 }
 .card-body{
     margin-top: 20px;
