--- a/public/css/site_style.css
+++ b/public/css/site_style.css
@@ -149,9 +149,9 @@ about{
 }
 
 @media only screen and (max-width: 600px) {
-    .main-content{
-        padding-top: 70px;
-    }
+    /*.main-content{*/
+    /*    padding-top: 50px;*/
+    /*}*/
     .carousel-caption h1{
         font-size: large;
     }
